add new api base config
