# openapi/oapi-concat.yaml
@@ -240,6 +240,10 @@ components:
     CreateInventoryRequest:
       type: object
       properties:
+        categories:
+          type: array
+          items:
+            type: string
         productCode:
           type: string
         productName:
@@ -251,6 +255,7 @@ components:
           items:
             type: string
       required:
+        - categories
         - productCode
         - productName
         - remainingQuantity
